# fastapi-authentication-system-postgresql

./: .env.example  pyproject.toml
alembic/: README  env.py
alembic/versions/: 440f3ae29a94_create_users_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: token.py  user.py
app/services/: auth_service.py
